# hmc

./: .gitignore  LICENSE  README.md  hmc.cabal  stack.yaml
src/Hmc/: Browser.hs  Common.hs  EventHandler.hs  Playlist.hs  Rendering.hs  Search.hs  Types.hs
src/main/: Main.hs
test/Hmc/: CommonSpec.hs  EventHandlerSpec.hs  TypesSpec.hs
