name:                hmc
version:             0.1.0.0
synopsis:            Music Player Daemon client
description:         Please see README.md
homepage:            https://github.com/ondrejslamecka/hmc#readme
license:             BSD3
license-file:        LICENSE
author:              Ondrej Slamecka
maintainer:          ondrej@slamecka.cz
copyright:           2017, Ondrej Slamecka
category:            Sound, Music
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -fwarn-unused-binds -fwarn-unused-imports
  exposed-modules:     Hmc.Common
                     , Hmc.Types
                     , Hmc.Search
                     , Hmc.Playlist
                     , Hmc.Browser
  build-depends:       base
                     , protolude
                     , microlens
                     , microlens-th
                     , vector
                     , brick
                     , vty
                     , libmpd
                     , text
                     , time
                     , containers
                     , data-default-class
                     , timers-updatable
                     , libmpd
                     , filepath
                     , directory
                     , parsec

  default-extensions:  NoImplicitPrelude
  default-language:    Haskell2010

executable hmc
  hs-source-dirs:      src/main
  main-is:             Main.hs
  ghc-options:         -threaded
                       -rtsopts -with-rtsopts=-N
                       -Wall
                       -fwarn-unused-binds -fwarn-unused-imports
  build-depends:       base
                     , protolude
                     , microlens
                     , text
                     , brick
                     , vty
                     , libmpd
                     , here
                     , hmc

  default-extensions:  NoImplicitPrelude
  default-language:    Haskell2010

test-suite spec
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  ghc-options:    -Wall
  build-depends:  base == 4.*
                , hmc
                , protolude
                , brick
                , vector
                , hspec == 2.*
  other-modules:  Hmc.CommonSpec
  default-extensions:  NoImplicitPrelude
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/ondrejslamecka/hmc
